# DFL-DictionaryFormatList

./: LICENSE  README.md  pyproject.toml
src/DFL/: __init__.py  __init__.pyi  dfl.py  dfl.pyi  file.py  file.pyi  types.py
tests/: __init__.py  dfl.py  dfl_test.dfl  file.py
